# FeasArgSet

./: .clang-format  .gitignore  AutoPush.sh  AutoPush.sh.bak  Push.sh  README.md  权限.sh
Module/: FeasArgSet  README.md  ReadMe.md  Update.md  Update.md.bak  customize.sh  module.prop  service.sh  service.sh.bak  uninstall.sh
Module/config/: PandoraFeasPath.conf  package.conf  path.conf  path.conf.bak
Test/: FeasArgSet  启动test.sh
Test/config/: PandoraFeasPath.conf  package.conf  package.conf.bak  path.conf
kernel_mod/: perfmgr.ko  perfmgr_515.ko  perfmgr_mtk.ko  perfmgr_mtk_515.ko  perfmgr_mtk_515.ko_dump.txt  test.sh
src/: Base.cpp  CMakeLists.txt  FeasArgSet  FeasArgSet.cpp  FeasArgSet.cpp.bak  FindPerfmgr.cpp  FindPerfmgr.cpp.bak  Freq.cpp  GetTopApp.cpp  Gov.cpp  InlineNode.cpp  NodeCtrl.cpp  Package.cpp  Profile.cpp  ReadProFile.cpp  Sm8475opt.cpp  Time.cpp  build.sh  cat.sh  z启动test.sh
src/config/: package.conf  path.conf
src/include/: Check.h  GameList.h  LockValue.h  LockValue.h_old  NodePermission.h  Path.h  UnLockValue.hpp  function.h  power_app_cfg.xml  powercontable.xml  powerscntbl.xml
